2011-10-30 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added a fudge factor to text placement from canvas to get a nicer
	  result.

2011-10-05 Peter Spjuth   <peter.spjuth@gmail.com>
	* Cleaned up to name ascend/descend font metrics consistently.
	* Text from canvas was displaced one line due to a incorrect
	  cleanup 2010-01 (auriocus) [Bug 18361]

2011-03-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Corrected text angle to be counterclockwise like other
	  angles. (Ian Gay) [Bug 17515]
	  *** INCOMPATIBLE CHANGE ***

2011-03-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Corrected combination of angle and align in text.
	  (Jeff Godfrey) [Bug 18027]

2011-03-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Locate built-in zlib before package. [FR 5261] [Bug 18353]

2010-09-17 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added curve method to draw quadratic and cubic beziers.
	  (Ian Gay) [FR 5106]
	* Deprecated qCurve.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Release 0.7 (skipping 0.6 to not confuse with other 0.6)

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added tests for font loading
	* Corrected naming of bboxb/t metrics.
	* Changed height metric to measure full bbox height

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Got font examples working.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Code standard cleanup.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Removed old packages "metrics" and "glyphnames".

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Added last of YS font patch.

2010-01-29 Peter Spjuth   <peter.spjuth@gmail.com>
	* Removed AFM file reader.

2010-01-27 Peter Spjuth   <peter.spjuth@gmail.com>
	* More of Yaroslav Schekin's patch.
	* Added font argument to CleanText.
	* Added bboxt and bboxb font metrics.
	* Corrected size of background fill for text.
	* Support angle for background fill for text.

2010-01-01 Peter Spjuth   <peter.spjuth@gmail.com>