@@ -1,3 +1,6 @@
+2012-02-07 Peter Spjuth   <peter.spjuth@gmail.com>
+	* Support patterns for canvas dashes. (arjen) [Bug 18501]
+	
 2011-10-30 Peter Spjuth   <peter.spjuth@gmail.com>
 	* Added a fudge factor to text placement from canvas to get a nicer
 	  result.
